JEDIT 3.1 VERSION HISTORY

* Version 3.1pre1

+ New Features

- File permissions are now preserved on Unix systems

+ Enhancements

- Edit menu rearranged and simplified a little
- Instead of loading all edit modes the first time it is started, and a
  cache on subsequent starts, jEdit now loads a 'mode catalog' file,
  which must be manually updated when modes are added or removed. There
  is one catalog in the system mode directory, and one in the user mode
  directory. This eliminates the lengthy wait when starting jEdit for
  the first time.
- Plugin shortcuts are now shown in a separate option pane
- Gutter changes:
  - Gutter can no longer be resized
  - 'Gutter Expanded' and 'Line Numbering' commands merged into one
  - Marker/register highlighting can now be toggled

+ API Changes

- EditAction.EditAction(String) deprecated. Plugins should no longer be
  subclassing EditAction; write an actions.xml file instead.
- MenuBarModel, MenuModel, MenuItemModel, ToolBarModel classes removed.
  Since plugins do not use these classes directly, it should not cause
  any breakage.