@@ -72,9 +72,6 @@ only then renamed to <filename> if the save was successful.
 
 - Bracket double click behavior is really annoying - make if configurable
 
-- .shortcut properties in plugins don't work. This is not too critical,
-  but it would be nice if it was fixed anyway.
-
 * Documentation
 
 Migrate to DocBook/XML.
